# Docker-practice

./: .gitignore  README.md  pyproject.toml
mongo_flask_5/dev/: docker-compose.yml
mongo_flask_5/dev/plot/: Dockerfile
python_2/dev/: app.py
python_api_3/dev/: app.py
ubuntu/: Dockerfile
ubuntu_1/: Dockerfile
