[tool.poetry]
name = "docker"
version = "0.1.0"
description = "Docker Practice"
authors = ["axmadJ3 <axmabdukarimov0304@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
